buzzing/lib/ffi/cpp/ffi.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class BuzzingLib {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  BuzzingLib(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  BuzzingLib.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void buzzing_init(
    ffi.Pointer<ffi.Char> param,
    int len,
    BuzzingPushHandler handler,
    ResultCallback callback,
  ) {
    return _buzzing_init(
      param,
      len,
      handler,
      callback,
    );
  }

  late final _buzzing_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Size, BuzzingPushHandler,
              ResultCallback)>>('buzzing_init');
  late final _buzzing_init = _buzzing_initPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Char>, int, BuzzingPushHandler, ResultCallback)>();

  void buzzing_invoke(
    int uid,
    int seq,
    int command,
    ffi.Pointer<ffi.Char> param,
    int len,
  ) {
    return _buzzing_invoke(
      uid,
      seq,
      command,
      param,
      len,
    );
  }

  late final _buzzing_invokePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Uint64, ffi.Int, ffi.Int, ffi.Pointer<ffi.Char>,
              ffi.Size)>>('buzzing_invoke');
  late final _buzzing_invoke = _buzzing_invokePtr
      .asFunction<void Function(int, int, int, ffi.Pointer<ffi.Char>, int)>();

  void buzzing_uninit() {
    return _buzzing_uninit();
  }

  late final _buzzing_uninitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('buzzing_uninit');
  late final _buzzing_uninit = _buzzing_uninitPtr.asFunction<void Function()>();
}

typedef BuzzingPushHandler
    = ffi.Pointer<ffi.NativeFunction<BuzzingPushHandlerFunction>>;
typedef BuzzingPushHandlerFunction = ffi.Void Function(ffi.Uint64 uid,
    ffi.Int seq, ffi.Int command, ffi.Pointer<ffi.Char> param, ffi.Size len);
typedef DartBuzzingPushHandlerFunction = void Function(
    int uid, int seq, int command, ffi.Pointer<ffi.Char> param, int len);
typedef ResultCallback
    = ffi.Pointer<ffi.NativeFunction<ResultCallbackFunction>>;
typedef ResultCallbackFunction = ffi.Void Function(ffi.Uint64 uid, ffi.Int seq,
    ffi.Int code, ffi.Pointer<ffi.Char> data, ffi.Size len);
typedef DartResultCallbackFunction = void Function(
    int uid, int seq, int code, ffi.Pointer<ffi.Char> data, int len);
